[package]
name = "concert-std"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
bumpalo = "3.5.0"
concert-std-derive = { path = "../concert-std-derive" }
immutable-map = "0.1.2"

concordium-std = { path = "/home/wolfgang/ProjectsUni/Compilerstep/smart_contracts/concordium-rust-smart-contracts/concordium-std", default-features = false }
